syntax = "proto3";

package shopnexus;

option go_package = "shopnexus-go-service/gen/pb";

enum RefundMethod {
  REFUND_METHOD_UNSPECIFIED = 0;
  PICKUP = 1;
  DROP_OFF = 2;
}

enum RefundStatus {
  REFUND_STATUS_UNSPECIFIED = 0;
  PENDING = 1;
  ACCEPTED = 2;
  REJECTED = 3;
  CANCELLED = 4;
}

message GetRefundRequest {
  string refund_id = 1;
}

message GetRefundResponse {
  string refund_id = 1;
  bytes product_id = 2;
  string description = 3;
  repeated bytes images = 4;
  repeated bytes videos = 5;
  RefundStatus status = 6;
  RefundMethod refund_method = 7;
}

message CreateRefundRequest {
  bytes product_id = 1;
  string description = 2;
  repeated bytes images = 3;
  repeated bytes videos = 4;
  RefundMethod refund_method = 5;

  enum RefundMethod {
    REFUND_METHOD_UNSPECIFIED = 0;
    PICKUP = 1;
    DROP_OFF = 2;
  }
}

message CreateRefundResponse {
  string refund_id = 1;
}

message PatchRefundRequest {
  // string refund_id = 1;
  string description = 1;
  repeated bytes images = 2;
  repeated bytes videos = 3;
  RefundMethod refund_method = 4;
}

message PatchRefundResponse {
  string refund_id = 1;
}

message CancelRefundRequest {
  string refund_id = 1;
}

message CancelRefundResponse {
  string refund_id = 1;
}

service Refund {
  rpc Get(GetRefundRequest) returns (GetRefundResponse) {}
  rpc Create(CreateRefundRequest) returns (CreateRefundResponse) {}
  rpc Patch(PatchRefundRequest) returns (PatchRefundResponse) {}
  rpc Cancel(CancelRefundRequest) returns (CancelRefundResponse) {}
}
